kubernetes/apps/hello-k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-k3s
  namespace: dev

spec:
  replicas: 3

  selector:
    matchLabels:
      app: hello-k3s

  template:
    metadata:
      labels:
        app: hello-k3s

    spec:
      containers:
        - name: hello-k3s

          image: registry.home.arpa:5000/hello-k3s:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 3000
