kubernetes/apps/hello-k3s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-k3s
  namespace: dev

spec:
  selector:
    app: hello-k3s
  
  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
