kubernetes/apps/hello-k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-k3s
  namespace: dev


spec:
  ingressClassName: traefik

  rules:
  - host: hello.home.arpa

    http:
      paths:
        - path: /
          pathType: Prefix
          
          backend:
            service:
              name: hello-k3s
              port:
                number: 80
